--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="https://kit.fontawesome.com/a699fa5281.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-    <title>LeafBook Pro</title>
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <title>LeafBook</title>
 </head>
 
 <body>
